# minizip

./: CMakeLists.txt  README.md  zip.c
minizip/: ioapi.h  zipcrypt.h
